--- a/WerWirdMillionaer/App.config
+++ b/WerWirdMillionaer/App.config
@@ -6,6 +6,9 @@
         <add name="WerWirdMillionaer.Properties.Settings.qstndbConnectionString"
             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\qstndb.mdf;Integrated Security=True;Connect Timeout=30"
             providerName="System.Data.SqlClient" />
+        <add name="WerWirdMillionaer.Properties.Settings.qstnSQLDBConnectionString"
+            connectionString="Data Source=HENRIK-PC\SQLSERVER;Initial Catalog=qstnDB;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
