--- a/WerWirdMillionaer/WerWirdMillionaer.csproj
+++ b/WerWirdMillionaer/WerWirdMillionaer.csproj
@@ -61,21 +61,40 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="CreatorForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="CreatorForm.Designer.cs">
+      <DependentUpon>CreatorForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NewQuestionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewQuestionForm.Designer.cs">
+      <DependentUpon>NewQuestionForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="qstnDBDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>qstnDBDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="QstnUtil.cs" />
+    <Compile Include="MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="qstndbDataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>qstndbDataSet.xsd</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="CreatorForm.resx">
+      <DependentUpon>CreatorForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewQuestionForm.resx">
+      <DependentUpon>NewQuestionForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -95,29 +114,20 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="qstndbDataSet.xsc">
-      <DependentUpon>qstndbDataSet.xsd</DependentUpon>
+    <None Include="qstnDBDataSet.xsc">
+      <DependentUpon>qstnDBDataSet.xsd</DependentUpon>
     </None>
-    <None Include="qstndbDataSet.xsd">
+    <None Include="qstnDBDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>qstndbDataSet.Designer.cs</LastGenOutput>
+      <LastGenOutput>qstnDBDataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="qstndbDataSet.xss">
-      <DependentUpon>qstndbDataSet.xsd</DependentUpon>
+    <None Include="qstnDBDataSet.xss">
+      <DependentUpon>qstnDBDataSet.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="qstndb.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="qstndb_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>qstndb.mdf</DependentUpon>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
